--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     implementation 'androidx.test:core-ktx:1.5.0'
 
     //compose
-    implementation 'androidx.activity:activity-compose:1.7.1'
+    implementation 'androidx.activity:activity-compose:1.7.2'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
@@ -94,9 +94,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     //Koin for dependency
-//    implementation 'org.koin:koin-android:1.0.2'
-//    implementation 'org.koin:koin-android-viewmodel:1.0.2'
-//    implementation 'org.koin:koin-androidx-scope:1.0.2'
+//    implementation "org.koin:koin-android:2.0.1"
+//    implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
+//    implementationplementation 'org.koin:koin-androidx-scope:2.0.1'
+    def koin_version = "3.3.1"
+    implementation "io.insert-koin:koin-android:$koin_version"
 
 
     // Lifecycle components
