--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,7 +78,7 @@ dependencies {
 //    implementation "androidx.room:room-runtime:$room_version"
 //    annotationProcessor "androidx.room:room-compiler:$room_version"
 //    // Kotlin Extensions and Coroutines support for Room
-//    implementation "androidx.room:room-ktx:2.5.1"
+//    implementation "androidx.room:room-ktx:$room_version"
 
     //kotlin coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
@@ -111,6 +111,7 @@ dependencies {
 //    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
 //    implementation "androidx.lifecycle:lifecycle-common-java8:2.3.1"
 //    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation "androidx.compose.runtime:runtime-livedata:1.7.2"
 
     //Picasso
 //    implementation 'com.squareup.picasso:picasso:2.71828'
