--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,7 +111,10 @@ dependencies {
 //    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
 //    implementation "androidx.lifecycle:lifecycle-common-java8:2.3.1"
 //    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation "androidx.compose.runtime:runtime-livedata:1.7.2"
+
+//    implementation "androidx.compose.runtime:runtime-livedata:1.7.2"
+    implementation "androidx.compose.runtime:runtime-livedata:1.5.0-beta01"
+
 
     //Picasso
 //    implementation 'com.squareup.picasso:picasso:2.71828'
