--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,8 @@ dependencies {
 //    annotationProcessor "androidx.room:room-compiler:$room_version"
 //    // Kotlin Extensions and Coroutines support for Room
 //    implementation "androidx.room:room-ktx:$room_version"
+    implementation 'androidx.room:room-ktx:2.5.1'
+
 
     //kotlin coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
