--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.1"
 
     //navigation
      def nav_version = "2.5.3"
@@ -87,14 +88,13 @@ dependencies {
 
 
     //Room Library
-//    def room_version = "2.5.1"
-//
-//    implementation "androidx.room:room-runtime:$room_version"
-//    annotationProcessor "androidx.room:room-compiler:$room_version"
-//    // Kotlin Extensions and Coroutines support for Room
-//    implementation "androidx.room:room-ktx:$room_version"
-    implementation 'androidx.room:room-ktx:2.5.1'
+    def room_version = "2.5.1"
 
+    implementation "androidx.room:room-runtime:$room_version"
+    // Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+//    kapt 'android.arch.persistence.room:compiler:1.1.1'
 
     //kotlin coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
