--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,8 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
     implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.1"
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 
     //navigation
      def nav_version = "2.5.3"
