--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,17 +2,17 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
-//    id("com.google.devtools.ksp")
+    id("com.google.devtools.ksp")
 }
 
 android {
     namespace 'com.huhn.androidarchitectureexample'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.huhn.androidarchitectureexample"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -47,18 +47,18 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures {
         compose true
         buildConfig true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.4.7'
+        kotlinCompilerExtensionVersion '1.5.4'
     }
     packagingOptions {
         resources {
@@ -69,31 +69,33 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.test:core-ktx:1.5.0'
 
     //compose
-    implementation 'androidx.activity:activity-compose:1.7.2'
+    implementation 'androidx.activity:activity-compose:1.8.0'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
-    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.2"
 
     //navigation
-     def nav_version = "2.5.3"
+     def nav_version = "2.7.5"
     implementation "androidx.navigation:navigation-compose:$nav_version"
 
     //Room Library
-    def room_version = "2.5.1"
+    def room_version = "2.6.0"
 
     implementation "androidx.room:room-runtime:$room_version"
     // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
-//    ksp "androidx.room:room-compiler:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    ksp "androidx.room:room-compiler:$room_version"
+//    kapt "androidx.room:room-compiler:$room_version"
+
+
 //    kapt 'android.arch.persistence.room:compiler:1.1.1'
 
     //kotlin coroutines
@@ -114,7 +116,7 @@ dependencies {
     implementation "io.insert-koin:koin-android:$koin_version"
 
     // Lifecycle components
-    implementation "androidx.compose.runtime:runtime-livedata:1.5.0-beta01"
+    implementation "androidx.compose.runtime:runtime-livedata:1.6.0-alpha08"
 
     //Picasso
 //    implementation 'com.squareup.picasso:picasso:2.71828'
