--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,6 +101,7 @@ dependencies {
     //coroutine lifecycle scopes
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2"
 
     //retrofit
     implementation 'com.google.code.gson:gson:2.10.1'
@@ -110,6 +111,10 @@ dependencies {
     //Koin for dependency
     def koin_version = "3.4.3"
     implementation "io.insert-koin:koin-android:$koin_version"
+    implementation "io.insert-koin:koin-androidx-navigation:$koin_version"
+    implementation "io.insert-koin:koin-androidx-compose:3.4.6"
+    testImplementation "io.insert-koin:koin-test-junit4:$koin_version"
+
 
     // Lifecycle components
     implementation "androidx.compose.runtime:runtime-livedata:1.6.0-alpha08"
