Remove redundant savedDriver from User Events & UI state. Rename SelectedDriver.
Add SetError user event, even thoug it is only called from the viewmodel itself. It is needed for testing.

Correct viewmodel to require repository interface, not impl

Add ViewModel unit tests for the UI State and User Events

Update README with testing stuff (more to come)

Display route type on Route Screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,6 +130,11 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+    testImplementation ("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.3") {
+        // https://github.com/Kotlin/kotlinx.coroutines/tree/master/kotlinx-coroutines-debug#debug-agent-and-android
+//        exclude group: "org.jetbrains.kotlinx", module: "kotlinx-coroutines-debug"
+    }
 }
 kapt {
     correctErrorTypes = true
