--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,10 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
@@ -74,13 +78,14 @@ dependencies {
     implementation 'androidx.test:core-ktx:1.5.0'
 
     //compose
-    implementation 'androidx.activity:activity-compose:1.8.0'
+    implementation 'androidx.activity:activity-compose:1.8.1'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
     implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.2"
+    androidTestImplementation project(path: ':app')
 
     //navigation
      def nav_version = "2.7.5"
@@ -97,6 +102,13 @@ dependencies {
     //kotlin coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1"
+
+    testImplementation ("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.1")
+//    testImplementation ("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.3") {
+//         // https://github.com/Kotlin/kotlinx.coroutines/tree/master/kotlinx-coroutines-debug#debug-agent-and-android
+//        exclude group: "org.jetbrains.kotlinx", module: "kotlinx-coroutines-debug"
+//    }
+
 
     //coroutine lifecycle scopes
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
@@ -117,7 +129,7 @@ dependencies {
 
 
     // Lifecycle components
-    implementation "androidx.compose.runtime:runtime-livedata:1.6.0-alpha08"
+    implementation "androidx.compose.runtime:runtime-livedata:1.6.0-beta01"
 
     //Picasso
 //    implementation 'com.squareup.picasso:picasso:2.71828'
@@ -130,11 +142,6 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
-
-    testImplementation ("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.3") {
-        // https://github.com/Kotlin/kotlinx.coroutines/tree/master/kotlinx-coroutines-debug#debug-agent-and-android
-//        exclude group: "org.jetbrains.kotlinx", module: "kotlinx-coroutines-debug"
-    }
 }
 kapt {
     correctErrorTypes = true
