--- a/app/build.gradle
+++ b/app/build.gradle
@@ -203,25 +203,26 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.12.0'
-    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.test:core-ktx:1.5.0'
 
     //compose
-    implementation 'androidx.activity:activity-compose:1.8.1'
+    implementation 'androidx.activity:activity-compose:1.8.2'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
     implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.2"
+    implementation 'androidx.test.ext:junit-ktx:1.1.5'
     androidTestImplementation project(path: ':app')
 
+
     //navigation
-     def nav_version = "2.7.5"
+     def nav_version = "2.7.6"
     implementation "androidx.navigation:navigation-compose:$nav_version"
 
     //Room Library
-    def room_version = "2.6.0"
+    def room_version = "2.6.1"
 
     implementation "androidx.room:room-runtime:$room_version"
     // Kotlin Extensions and Coroutines support for Room
