--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,12 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-//this is groovy syntax
+buildscript {
+    dependencies {
+        classpath("com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.1")
+    }
+}
 plugins {
-    /* These plugins are searched for in the repositories mentioned in settings.gradle */
-
-    id 'com.android.application' version '8.1.4' apply false
-    id 'com.android.library' version '8.1.4' apply false
-    id 'org.jetbrains.kotlin.android' version '1.9.20' apply false
-    id 'com.google.devtools.ksp' version "1.9.20-1.0.14" apply false
     /*
+     * These plugins are searched for in the repositories mentioned in settings.gradle
+     *
      * id 'package-name0of-plugin' version "version-number" apply false
      *
      * Use `apply false` to add a Gradle plugin as a build dependency
@@ -17,4 +16,10 @@ plugins {
      *
      * For more information, see Applying external plugins with same version to subprojects.
      */
+
+    id 'com.android.application' version '8.1.4' apply false
+    id 'com.android.library' version '8.1.4' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.20' apply false
+    id 'com.google.devtools.ksp' version "1.9.20-1.0.14" apply false
 }
+
